--- a/src/components/header.css
+++ b/src/components/header.css
@@ -3,16 +3,17 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
+    padding-top: 1.5rem;
 }
 .header-logo{
-    width: 100px;
+    width: 118px;
 }
 .header-menu-container{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 }
 .dark-mode-img{
     filter: invert(100%);
@@ -20,7 +21,7 @@
 .header-menu-container p{
     letter-spacing: 1px;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1.1rem;
 }
 .icon-container{
     cursor: pointer;
