--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -2,9 +2,10 @@
 .skills-icon-container{
     display: flex;
     width: 100%;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 .icon{
     font-size: 3rem;
     margin: 1rem;
+    margin-left: 2rem;
 }
