--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -68,7 +68,11 @@
     color: #19A7CE;
     
 }
-#skills-h1{
+#skills-h1,
+#projects-h1{
     margin-top: 2rem;
     margin-bottom: 0;
+}
+#projects-h1{
+    margin-bottom: 2rem;
 }
