--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,15 @@ a{
     text-decoration: none;
     color: unset;
 }
+
+@media screen and (min-width: 700px) {
+    .main-container{
+        max-width: 1100px;
+        margin: 0 auto;
+    }
+}
+
+.body-dark{
+    transition: all 0.5s ease-in-out;
+    background-color: #03001C;
+}
