--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -28,7 +28,7 @@
 }
 .home-light-mode{
     color: #146C94;
-    text-shadow: 1px 1px 16px #146C94;
+    /* text-shadow: 1px 1px 16px #146C94; */
 }
 .home-container-developer-speciality{
     font-size: 1.1rem;
@@ -75,4 +75,30 @@
 }
 #projects-h1{
     margin-bottom: 2rem;
+}
+
+
+/*Media Queries*/
+@media screen and (min-width: 700px) {
+    .home-container-developer-heading{
+        font-size: 4rem;
+    }
+    .home-container-developer-speciality{
+        font-size: 2rem;
+    }
+    .home-developer-about{
+        font-size: 1.5rem;
+        width: 65%;
+    }
+    .home-social-icons-container{
+        gap: 2rem;
+        font-size: 3rem;
+    }
+    .avatar-img{
+        width: 400px;
+    }
+    #skills-h1,
+    #projects-h1{
+        font-size: 4rem;
+    }
 }
