--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -12,3 +12,15 @@
     gap: 1rem;
     font-size: 1.5rem;
 }
+
+/*Media Queries*/
+@media screen and (min-width: 700px) {
+    .footer-icon-container{
+        font-size: 2.3rem;
+        gap: 2rem;
+    }
+
+    .footer h3{
+        font-size: 2rem;
+    }
+}
