--- a/src/components/header.css
+++ b/src/components/header.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
     font-size: 1.3rem;
 }
 .dark-mode-img{
@@ -27,6 +27,19 @@
     cursor: pointer;
 }
 
+/*Media Queries*/
+@media screen and (min-width: 700px) {
+    .header-logo{
+        width: 200px;
+    }
+    .header-menu-container{
+        font-size: 3rem;
+    }
+
+    .header-menu-container p{
+        font-size: 2rem;
+    }
+}
 
 
 /*Animation*/
