--- a/src/Pages/work.css
+++ b/src/Pages/work.css
@@ -57,7 +57,24 @@
     gap: 1rem;
     font-size: 2rem;
 }
+.all-projects-container-heading{
+    text-align: center;
+}
 
 .work-light-mode{
     border: 4px solid #03001C;
+}
+
+
+/*Media Queries*/
+@media screen and (min-width: 700px) {
+    .work-main-container{
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        /* gap: 1rem; */
+    }
+    .work-project{
+        width: 40%;
+    }
 }
