--- a/src/Pages/work.css
+++ b/src/Pages/work.css
@@ -64,6 +64,12 @@
 .work-light-mode{
     border: 4px solid #03001C;
 }
+.link-for-projects{
+    font-weight: 800;
+    color: #00237b;
+    text-decoration: underline;
+    font-size: 1rem;
+}
 
 
 /*Media Queries*/
